updated the card width and height

--- a/app/globals.css
+++ b/app/globals.css
@@ -53,11 +53,11 @@ nav li {
   .drink-cat img{
     width: 100%!important; 
   }
-    button{
+    /* button{
     width: 200px;
     height: 38px;
     font-size:10px ;
-  }
+  } */
 }
 
 
