--- a/app/globals.css
+++ b/app/globals.css
@@ -86,8 +86,8 @@ nav li {
      padding-left: 3.1em
   }
    .topProduct {
-   padding-left: 24px;
-   padding-right: 24px;
+   padding-left: 12px;
+   padding-right: 12px;
   }
 }
 
@@ -96,6 +96,10 @@ nav li {
     width: 150px;
     padding-left: 2px;
    padding-right: 2px;
+  }
+    .topProduct {
+   padding-left: 24px;
+   padding-right: 24px;
   }
 }
 
