--- a/app/globals.css
+++ b/app/globals.css
@@ -63,8 +63,8 @@ nav li {
 
 @media (max-width: 578px) {
   button{
-    width: 96px;
-    height: 30px;
+    width: 102px;
+    height: 32px;
     font-size:10px ;
   
   }
@@ -94,8 +94,11 @@ nav li {
    padding-right: 2px;
   }
     .topProduct {
-   padding-left: 24px;
-   padding-right: 24px;
+   padding-left: 2px;
+   padding-right: 2px;
+  }
+  .h1{
+    margin-bottom: 30px;
   }
 }
 
